Improve location selection from the Google Map. Send NULL if no precision is given. Google Elevation API first implementation...